# DeepZero

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  SECURITY.md  actionable_queue.json  copy_reports.ps1  pyproject.toml
.agent/workflows/: analyze.md
.github/workflows/: ci.yml
pipelines/loldrivers/: assessment.j2  pipeline.yaml
pipelines/loldrivers/rules/: method_neither.yaml  msr_access.yaml
processors/ghidra_decompile/: ghidra_decompile.py
processors/ghidra_decompile/scripts/: extract_dispatch.py
processors/loldrivers_filter/: loldrivers_filter.py
processors/pe_ingest/: pe_ingest.py
processors/semgrep_scanner/: semgrep_scanner.py
src/byovd_agent/: __init__.py  agent.py  config.py  main.py  models.py  prompts.py
src/byovd_agent/identify/: __init__.py  semgrep_scanner.py
src/byovd_agent/identify/rules/: arbitrary_rw.yaml  buffer_overflow.yaml  method_neither.yaml
src/byovd_agent/ingest/: __init__.py  scraper.py  triage.py
src/byovd_agent/knowledge/: loldrivers.py  vuln_patterns.py
src/byovd_agent/translate/: __init__.py  ghidra_runner.py
src/byovd_agent/translate/scripts/: extract_dispatch.py
src/deepzero/: __init__.py  __main__.py  cli.py
src/deepzero/api/: server.py
src/deepzero/engine/: context.py  llm.py  pipeline.py  process.py  registry.py  runner.py  stage.py  state.py  types.py  ui.py
src/deepzero/providers/: decompiler.py  llm.py
src/deepzero/stages/: __init__.py  command.py  filter.py  hash_filter.py  ingest.py  llm.py  semgrep_scanner.py  sort.py  top_k.py
tests/: test_api_server.py  test_builtin_external.py  test_builtin_filters.py  test_builtin_ingest.py  test_cli.py  test_context.py  test_engine_context.py  test_engine_llm.py  test_engine_pipeline.py  test_engine_registry.py  test_engine_ui.py  test_extract_dispatch.py  test_ghidra_decompile.py  test_ghidra_e2e.py  test_loldrivers_filter.py  test_pe_ingest.py  test_pipeline.py  test_pipeline_e2e.py  test_process.py  test_providers_llm.py  test_registry.py  test_runner.py  test_semgrep_scanner.py  test_sort.py  test_stage.py  test_stage_sort.py  test_stages_llm.py  test_state.py
tools/ghidra_decompile/: ghidra_decompile.py
tools/ghidra_decompile/scripts/: extract_dispatch.py
tools/loldrivers_filter/: loldrivers_filter.py
tools/pe_ingest/: pe_ingest.py
